--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'AW-16670303843');
 </script>
-    <title>Home</title>
+    <title>Home.</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
