--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <div class="header">
             <a href="index.html"><img src="images/logomains.png" alt=""></a>
         </div>
-        <h1>Contact Us</h1>
+        <h1>Contact Us/</h1>
         <form class="contact-form" action="/submit_form" method="post">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
