--- a/index.html
+++ b/index.html
@@ -707,9 +707,9 @@
           <div class="container-fluid">
             <div class="footer-minimal-inset oh">
               <ul class="footer-list-category-2">
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Refund Policy</a></li>
+                <li><a href="ourterms.html">Terms & Conditions</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="refund-policy.html">Refund Policy</a></li>
                 <li><a href="#">Cloud Solutions</a></li>
                 <li><a href="#">Customer Support</a></li>
               </ul>
